# cliner

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  main.rs
src/generators/: cliner_generator.rs  cliner_initializer.rs  cliner_runner.rs  mod.rs  output_generator.rs
src/models/: cli.rs  mod.rs  mode.rs  paths.rs
src/processors/: file_processor.rs  markdown_parser.rs  mod.rs
