[package]
name = "cliner"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.3", features = ["derive"] }
home = "0.5.9"

[dev-dependencies]
tempfile = "3.2.0"
assert_cmd = "2.0.14"
predicates = "3.1.0"
